--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 # URL VARIABLES
 #
 # site domain, full URL to the production location of your collection
-url: 
+url:
 # path to location on the domain if necessary e.g. /digital/hjccc
-baseurl: 
+baseurl:
 # location of code, the full url to your github repository
 source-code: https://github.com/CollectionBuilder/collectionbuilder-csv
 
@@ -18,7 +18,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-csv
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Trying to test this system with a few items from the punk collections
+title: Testing this system with a few items from the punk collections
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: Is this system feasible to use?
 # description appears in meta tags and other locations
@@ -32,7 +32,7 @@ author: CollectionBuilder
 ##########
 # COLLECTION SETTINGS
 #
-# Set the metadata for your collection (the name of the CSV file in your _data directory that describes the objects in your collection) 
+# Set the metadata for your collection (the name of the CSV file in your _data directory that describes the objects in your collection)
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
 metadata: punk-test
 # page generation settings [optional!]
@@ -42,13 +42,13 @@ metadata: punk-test
 #     template: 'item'
 #     name: 'objectid'
 #     dir: 'items'
-#     extension: 'html' 
-#     filter: 'objectid'  
+#     extension: 'html'
+#     filter: 'objectid'
 
 ##########
-# Site/Organization Branding 
+# Site/Organization Branding
 #   Enter information for your organization (replacing the CDIL links and name below) if you'd like to brand your site with a logo
-#   To remove the branding, comment out these values, or delete them. 
+#   To remove the branding, comment out these values, or delete them.
 #
 organization-name: "Center for Digital Inquiry and Learning (CDIL)"
 organization-link: https://cdil.lib.uidaho.edu/
@@ -59,17 +59,27 @@ organization-logo-nav: https://cdil.lib.uidaho.edu/assets/img/logo.png
 # ROBOTS EXCLUDE
 #
 # set noindex to true if you do NOT want Google to index your site
-# noindex: true 
+# noindex: true
 
 ##########
-# BUILD SETTINGS 
+# BUILD SETTINGS
 #
 # Note: use environment variable on build command to include analytics
 # JEKYLL_ENV=production jekyll build
 # (this is done automatically by gh-pages build)
 #
 # ignore stuff
-exclude: [docs/, Rakefile, README.md, LICENSE, CITATION.cff, CODE_OF_CONDUCT.md, CONTRIBUTING.md, SECURITY.md]
+exclude:
+  [
+    docs/,
+    Rakefile,
+    README.md,
+    LICENSE,
+    CITATION.cff,
+    CODE_OF_CONDUCT.md,
+    CONTRIBUTING.md,
+    SECURITY.md,
+  ]
 # compress CSS output
 sass:
   style: compressed
